Refactor event publishing mechanism for transactions
- Consolidate event publisher interfaces to simplify event handling
- Update transaction event publishing to use new domain event structure
- Improve clarity in transaction service by removing unnecessary generics